--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "htmltostring",
-  "version": "1.0.0",
-  "description": "convert html DOM elemnt to string",
+  "version": "1.0.1",
+  "description": "convert html DOM element to string",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
